plugins {
    id 'java-library'
    id 'io.quarkus.extension'
}

description = 'Quarkus Dynamic gRPC Extension - Runtime'

quarkusExtension {
    deploymentModule = 'deployment'
}

dependencies {
    // Quarkus BOM
    implementation platform("io.quarkus:quarkus-bom:${quarkusVersion}")

    // Quarkus core
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-grpc'
    implementation 'io.quarkus:quarkus-vertx'
    implementation 'io.quarkus:quarkus-smallrye-stork'

    // Stork Consul discovery (version managed by Quarkus BOM)
    implementation 'io.smallrye.stork:stork-service-discovery-consul'

    // Vertx Consul client
    implementation 'io.vertx:vertx-consul-client'

    // Caching
    implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"

    // gRPC
    implementation 'io.grpc:grpc-api'
    implementation 'io.grpc:grpc-stub'
    implementation 'io.grpc:grpc-netty'

    // Annotation processor for extension metadata
    annotationProcessor 'io.quarkus:quarkus-extension-processor'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

// Workaround for Gradle 9: disable validateExtension which performs unsafe configuration resolution
tasks.matching { it.name == 'validateExtension' }.configureEach {
    enabled = false
}
